--- a/jubel.html
+++ b/jubel.html
@@ -97,21 +97,28 @@
             margin-bottom: 0.3rem;
         }
 
-        /* Home Section */
+        /* Home Section - IMPROVED CENTERING */
         #home {
             padding: 4rem 1rem 1rem;
             min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .home-container {
             display: flex;
             flex-direction: column;
+            align-items: center;
             gap: 1.5rem;
+            max-width: 500px;
+            width: 100%;
+            text-align: center;
         }
 
         .profile-img-container {
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             margin: 0 auto;
             border-radius: 50%;
             overflow: hidden;
@@ -130,7 +137,6 @@
             font-weight: 700;
             line-height: 1.3;
             margin-bottom: 0.5rem;
-            text-align: center;
         }
 
         .hero-title span {
@@ -173,13 +179,13 @@
             line-height: 1.5;
             margin-bottom: 1.5rem;
             color: var(--text-light);
-            text-align: center;
         }
 
         .action-buttons {
             display: flex;
             gap: 0.8rem;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
         .tour-btn {
@@ -718,7 +724,7 @@
         </div>
     </nav>
 
-    <!-- Home Section -->
+    <!-- Home Section - NOW BETTER CENTERED -->
     <section id="home" class="active">
         <div class="home-container">
             <div class="profile-img-container">
