--- a/jubel.html
+++ b/jubel.html
@@ -66,17 +66,25 @@
         }
 
         /* Bottom Navigation - IMPROVED STYLING */
+       /* Bottom Navigation - FIXED FOR ALL SECTIONS */
         .bottom-nav {
             position: fixed;
             bottom: 0;
             width: 100%;
             background: var(--card-bg);
             display: flex;
-            justify-content: space-around;
-            padding: 0.8rem 0;
+            justify-content: space-between;
+            padding: 0.8rem 0.5rem;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
             z-index: 1000;
             border-top: 1px solid var(--border-color);
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+            scrollbar-width: none;
+        }
+
+        .bottom-nav::-webkit-scrollbar {
+            display: none;
         }
 
         .nav-item {
@@ -85,10 +93,12 @@
             align-items: center;
             text-decoration: none;
             color: var(--text-light);
-            font-size: 0.7rem;
+            font-size: 0.65rem;
             transition: all 0.3s ease;
-            padding: 0.3rem 0.5rem;
+            padding: 0.3rem 0.4rem;
             border-radius: 10px;
+            min-width: 50px;
+            flex-shrink: 0;
         }
 
         .nav-item.active {
@@ -98,17 +108,16 @@
         }
 
         .nav-icon {
-            font-size: 1.2rem;
-            margin-bottom: 0.3rem;
+            font-size: 1.1rem;
+            margin-bottom: 0.2rem;
             transition: all 0.3s ease;
         }
 
         .nav-item.active .nav-icon {
-            font-size: 1.5rem; /* Bigger icon for active section */
+            font-size: 1.3rem;
             color: var(--primary-blue);
             transform: scale(1.2);
         }
-
         /* Home Section - LARGER PROFILE PICTURE */
         #home {
             padding: 4rem 1rem 1rem;
@@ -1117,7 +1126,7 @@
         </section>
     </div>
 
-    <!-- Bottom Navigation - IMPROVED STYLING -->
+   <!-- Bottom Navigation - IMPROVED FOR ALL SECTIONS -->
     <div class="bottom-nav">
         <a href="#home" class="nav-item active" data-section="home">
             <i class="fas fa-home nav-icon"></i>
@@ -1156,7 +1165,6 @@
             <span>Contact</span>
         </a>
     </div>
-
     <!-- Modal -->
     <div id="contactModal" class="modal">
         <div class="modal-content">
@@ -1382,3 +1390,4 @@
     </script>
 </body>
 </html>
+
