--- a/jubel.html
+++ b/jubel.html
@@ -504,7 +504,7 @@
             <div class="home-container">
                 <img src="zamlift.jpg" alt="Jubel" class="profile-large" onerror="this.src='https://via.placeholder.com/150'">
                 <h1 class="hero-title">
-                    Jubel Mobela <span>Founder & CEO of <span class="blue-highlight">BUFFER ZONE</span>, <span class="blue-highlight">ZATRALO</span>, <span class="blue-highlight">MIRROR HOUSE</span>, <span class="blue-highlight">ZYNAPSE</span> & <span class="blue-highlight">JUBEL</span></span>
+                    Jubel Mobela <span>Founder & CEO of <span class="blue-highlight">Buffer Zone</span>, <span class="blue-highlight">ZATRALO</span>, <span class="blue-highlight">Mirror House</span>, <span class="blue-highlight">ZYNAPSE</span> & <span class="blue-highlight">JUBEL</span></span>
                 </h1>
                 <div class="social-row">
                     <a href="#" class="social-circle"><i class="fab fa-facebook"></i></a>
@@ -800,3 +800,4 @@
     </script>
 </body>
 </html>
+
